--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 						<li><a class="link-3" href="https://www.freedownloadmanager.org/" target="_blank">FDM</a></li>
 						<li><a class="link-3" href="https://pan.baidu.com/s/1smJDGiL#cp0f" target="_blank">迅雷</a></li>
 						<li><a class="link-3" href="https://www.rizonesoft.com/downloads/complete-internet-repair/" target="_blank">ComIntRep</a></li>
-						<li><a class="link-3" href="https://www.cpuid.com/softwares/cpu-z.html" target="_blank">CPU-Z</a></li>
-						<li><a class="link-3" href="https://www.techpowerup.com/download/techpowerup-gpu-z/" target="_blank">GPU-Z</a></li>
+						<li><a class="link-3" href="https://pan.baidu.com/s/1ggqms2B#59q6" target="_blank">烈火RAR</a></li>
 						<li><a class="link-3" href="https://otp.landian.vip/zh-cn/" target="_blank">OTP</a></li>
-
+                        <li><a class="link-3" href="http://wpspro.support.wps.cn/gov/guangdong/huizhou/" target="_blank">WPS 政府版</a></li>
 						
 					</ul>
 				</div>
@@ -63,8 +62,8 @@
 						<li><a class="link-3" href="http://www.wepe.com.cn/download.html" target="_blank">微PE</a></li>
 						<li><a class="link-3" href="https://rufus.ie/" target="_blank">Rufus</a></li>
 						<li><a class="link-3" href="https://crystalmark.info/ja/download/" target="_blank">CrystalDiskInfo</a></li>
-						<!--<li><a class="link-3" href="../../www.xiami.com/default.htm" target="_blank"></a></li>
-						<li><a class="link-3" href="../../www.yinyuetai.com/default.htm" target="_blank"></a></li>-->
+						<li><a class="link-3" href="https://www.cpuid.com/softwares/cpu-z.html" target="_blank">CPU-Z</a></li>
+						<li><a class="link-3" href="https://www.techpowerup.com/download/techpowerup-gpu-z/" target="_blank">GPU-Z</a></li>
 					</ul>
 				</div>
 			    <div class="jj-list">
@@ -75,7 +74,7 @@
 						<li><a class="link-3" href="http://www.dayanzai.me/" target="_blank">大眼仔</a></li>
 						<li><a class="link-3" href="https://www.laomoit.com/" target="_blank">殁漂遥</a></li>
 						<li><a class="link-3" href="https://www.iplaysoft.com/" target="_blank">异次元软件</a></li>
-						<li><a class="link-3" href="https://www.appinn.com/" target="_blank">小众软件</a></li>
+						<li><a class="link-3" href="http://wenlei.ys168.com//" target="_blank">闻雷</a></li>
 						<li><a class="link-3" href="http://www.carrotchou.blog/" target="_blank">胡萝卜周</a></li>
 						<li><a class="link-3" href="https://github.com/Awesome-Windows/Awesome/blob/master/README-cn.md" target="_blank">Awesome</a></li>
 						<li><a class="link-3" href="http://www.meiriyixue.cn/" target="_blank">每日一学</a></li>
@@ -92,7 +91,7 @@
 						<li><a class="link-3" href="http://www.runoob.com/" target="_blank">菜鸟教程</a></li>
 						<li><a class="link-3" href="https://www.imooc.com/" target="_blank">慕课网</a></li>
 						<li><a class="link-3" href="https://www.icourse163.org/" target="_blank">MOOC</a></li>
-						<!--<li><a class="link-3" href="../../www.qdaily.com/default.htm" target="_blank">好奇日报</a></li>-->
+						<li><a class="link-3" href="https://www.liaoxuefeng.com/" target="_blank">廖雪峰</a></li>
 					</ul>
 				</div>
 				<div class="jj-list">
@@ -132,6 +131,7 @@
 						<li><a class="link-3" href="http://pianyuan.net/" target="_blank">片源网</a></li>
 						<li><a class="link-3" href="http://www.vodxc.com/" target="_blank">星辰影院</a></li>
 						<li><a class="link-3" href="http://jx.618ge.com/" target="_blank">vip解析</a></li>
+						<li><a class="link-3" href="http://v.laod.cn/" target="_blank">老D </a></li>
 						<li><a class="link-3" href="http://131zy.vip/" target="_blank">131采集站</a></li>
 						<li><a class="link-3" href="http://yongjiuzy.cc/" target="_blank">采集站</a></li>
 						<li><a class="link-3" href="http://ifkdy.com/" target="_blank">疯狂影视</a></li>		
@@ -146,6 +146,21 @@
 						<li><a class="link-3" href="https://www.maldun.com/submit/submit_file/" target="_blank">魔盾</a></li>
 						<li><a class="link-3" href="https://metadefender.opswat.com" target="_blank">OPSWAT</a></li>
 						<li><a class="link-3" href="https://virusdesk.kaspersky.cn/" target="_blank">卡巴斯基</a></li>
+
+					</ul>	
+				</div>
+				<div class="jj-list">
+					<div class="jj-list-tit">其他</div>
+					<ul class="jj-list-con">
+						<li><a class="link-3" href="https://support.office.com/zh-cn/article/%E4%BB%8E-pc-%E5%8D%B8%E8%BD%BD-office-9dd49b83-264a-477a-8fcc-2fdf5dbf61d8?ui=zh-CN&rs=zh-CN&ad=CN" target="_blank">卸载office</a></li>
+						<li><a class="link-3" href="https://bbs.kafan.cn/thread-1852525-1-1.html" target="_blank">杀软卸载工具</a></li>
+						<li><a class="link-3" href="https://www.pdflibr.com/" target="_blank">云短信</a></li>
+						<li><a class="link-3" href="https://yunduanxin.net/" target="_blank">云短信</a></li>
+						<li><a class="link-3" href="https://www.receive-sms-online.info/" target="_blank">云短信</a></li>
+						<li><a class="link-3" href="https://www.fakenamegenerator.com/" target="_blank">身份生成</a></li>
+						<li><a class="link-3" href="http://www.haoweichi.com/" target="_blank">身份生成</a></li>
+						<li><a class="link-3" href="https://learngitbranching.js.org/" target="_blank">git</a></li>
+						<li><a class="link-3" href="https://demo.glyptodon.com/" target="_blank">体验机</a></li>
 
 					</ul>	
 				</div>
